--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 	<meta charset="utf-8">
@@ -20,7 +20,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-	<title>React App</title>
+	<title>XBlocNotas</title>
+  <link rel="stylesheet/css" href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" />
 </head>
 
 <body>
