--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 	<title>XBlocNotas</title>
-  <link rel="stylesheet/css" href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" />
+  <link rel="stylesheet" href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" />
 </head>
 
 <body>
